# ML

./: .gitignore  Diabetes Prediction.ipynb
DL/ANN_churn_for_bank_customer/: churn_for_bank_customers.ipynb
GenAI/Langchain/rag_chain/: chain_sample.ipynb
Projects/: pyproject.toml
Sentiment Analysis movie Review/: README.md  pyproject.toml
Sentiment Analysis movie Review/client/: app.py
Sentiment Analysis movie Review/controller/: classify_controller.py
Sentiment Analysis movie Review/service/: analyser.py
Sentiment Analysis movie Review/training/: modelbuilding.ipynb
linear_regression/: Linear Regression Housing Price Prediction.ipynb
logistic_regression/.ipynb_checkpoints/: Logistic_reg_spam_mail-checkpoint.ipynb
svm_diabetes_prediction/: Diabetes Prediction.ipynb
