[project]
name = "sentiment-analysis-movie-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "ipykernel>=7.2.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "tensorflow>=2.21.0",
    "uvicorn>=0.48.0",
]
